src/oblig2patch/src/tests/oblig2/errors/type4_fail.cmp
program type4_fail
begin
    proc main()
    begin
    in
        while 42.0 do /* error, expression not bool */
        
            printstr( "Should not be here" )
        od
    end
end